# cec-24pin-idf

./: .gitignore  CLAUDE.md  CMakeLists.txt  FOLLOWUPS.md  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/cec_capture/: CMakeLists.txt  cec_capture.c
components/cec_capture/include/: cec_capture.h
components/cec_cli/: CMakeLists.txt  cec_cli.c
components/cec_cli/include/: cec_cli.h
components/cec_common/include/: cec_state.h
components/cec_detection/: CMakeLists.txt  cec_layer1.c  cec_layer2.c  cec_layer3.c  cec_state.c  cec_swing.c
components/cec_detection/include/: cec_filters.h  cec_layer1.h  cec_layer2.h  cec_layer3.h  cec_state.h  cec_swing.h
components/cec_filters/: CMakeLists.txt  cec_filters.c
components/cec_nvs/: CMakeLists.txt  cec_nvs.c
components/cec_nvs/include/: cec_nvs.h
components/cec_sensors/: CMakeLists.txt  acs712.c  cec_adc.c  ina226.c  thermistor.c
components/cec_sensors/include/: acs712.h  cec_adc.h  ina226.h  thermistor.h
components/cec_telemetry/: CMakeLists.txt  cec_teleplot.c
components/cec_telemetry/include/: cec_teleplot.h
design/: F1_continuous_hs.md
main/: CMakeLists.txt  main.c
